# dnd-generator

./: .env.example  .gitignore  BACKEND_GENERATION_PLAN.md  CLAUDE.md  PHASE_MIGRATION_PLAN.md  PLAN.md  README.md  UPGRADE_PLAN_P1.md  UPGRADE_PLAN_P10.md  UPGRADE_PLAN_P11.md  UPGRADE_PLAN_P2.md  UPGRADE_PLAN_P3.md  UPGRADE_PLAN_P4.md  UPGRADE_PLAN_P5.md  UPGRADE_PLAN_P6.md  UPGRADE_PLAN_P7.md  UPGRADE_PLAN_P8.md  UPGRADE_PLAN_P9.md  desired_process_flow.md  docker-compose.prod.yml  docker-compose.yml  example_schema.md  install-docker.sh  install-local-tools.sh  justfile  setup_array_relationships.sh  track_new_tables.sh  track_tables.sh
backend/: Cargo.toml  Dockerfile
backend/hasura/metadata/databases/default/tables/: public_celestial_bodies.yaml  public_character_classes.yaml  public_encounters.yaml  public_entities.yaml  public_entity_factions.yaml  public_entity_items.yaml  (+17 more)
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/handlers/: campaign.rs  health.rs  mod.rs
backend/src/models/: backstory.rs  campaign.rs  campaign_detail.rs  character.rs  character_building.rs  encounter.rs  entity.rs  generation.rs  items.rs  location.rs  location_enhanced.rs  magic.rs  mod.rs  npc.rs  organization.rs  quest.rs  quest_hook.rs  social_systems.rs  world.rs  world_building.rs
backend/src/services/: anthropic.rs  campaign_service.rs  database.rs  database_enhanced.rs  generation_service.rs  generation_service_enhanced.rs  graphql_client.rs  hasura_schema_generator.rs  mod.rs  reference_data.rs
backend/tests/: integration_test.rs
(+69 files in other folders)
